--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   </head>
 
   <body>
